grafana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: grafana-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:005459661421:certificate/546326b2-4ab5-4b31-aa5a-6492f09ab96d
    alb.ingress.kubernetes.io/tags: cluster=dev1,grafana=grafana            
  namespace: istio-system
spec:
  tls:
  - hosts:
    - grafana.dev1.eks.openshiftlabs.net
  rules:
    - http:       
        paths:
          - path: /*
            backend:
              serviceName: grafana
              servicePort: 3000
