istio-2-kong-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kong-gateway
  namespace: kong
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kong-tls-credentials        
    hosts:
    - kong-dev.istio.dev1.eks.openshiftlabs.net
    - kong-e2e.istio.dev1.eks.openshiftlabs.net
    - kong-staging.istio.dev1.eks.openshiftlabs.net
    - kong-prd.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-dev.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-e2e.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-staging.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-prd.istio.dev1.eks.openshiftlabs.net
  - port:
      number: 80
      name: http
      protocol: HTTP    
    hosts:
    - kong-dev.istio.dev1.eks.openshiftlabs.net
    - kong-e2e.istio.dev1.eks.openshiftlabs.net
    - kong-staging.istio.dev1.eks.openshiftlabs.net
    - kong-prd.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-dev.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-e2e.istio.dev1.eks.openshiftlabs.net 
    - kong-heroes-staging.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-prd.istio.dev1.eks.openshiftlabs.net
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kong-vs
  namespace: kong
spec:
  hosts:
    - kong-dev.istio.dev1.eks.openshiftlabs.net
    - kong-e2e.istio.dev1.eks.openshiftlabs.net
    - kong-staging.istio.dev1.eks.openshiftlabs.net
    - kong-prd.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-dev.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-e2e.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-staging.istio.dev1.eks.openshiftlabs.net
    - kong-heroes-prd.istio.dev1.eks.openshiftlabs.net
  gateways:
  - kong-gateway
  http:
  - match:
    - uri:
        prefix: /        
    route:
    - destination:
        host: global-kong-proxy.kong.svc.cluster.local
        port:
          number: 80

---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: default
  namespace: kong
spec:
  mtls:
    mode: STRICT
