istio-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: istio
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: istio-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:005459661421:certificate/546326b2-4ab5-4b31-aa5a-6492f09ab96d 
    alb.ingress.kubernetes.io/tags: cluster=dev1,istio=istio   
  namespace: istio-system
spec:
  tls:
  - hosts:
    - kong-dev.istio.dev1.eks.openshiftlabs.net
    - kong-e2e.istio.dev1.eks.openshiftlabs.net
    - kong-staging.istio.dev1.eks.openshiftlabs.net
    - kong-prd.istio.dev1.eks.openshiftlabs.net
  rules:
    - http:       
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: istio-ingressgateway
              servicePort: 80

---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
