kiali-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kiali-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip    
  namespace: istio-system
spec:
  rules:
      - http:
          paths:
            - path: /*
              backend:
                serviceName: kiali
                servicePort: 20001
