kong-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-http
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip    
  namespace: kong
spec:
  rules:
      - http:
          paths:
            - path: /*
              backend:
                serviceName: global-kong-proxy
                servicePort: 80

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-tls
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip    
  namespace: kong
spec:
  rules:
      - http:
          paths:
            - path: /*
              backend:
                serviceName: global-kong-proxy
                servicePort: 443
